--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 =====================================
 
 CSS Reset
-	http://meyerweb.com/eric/tools/css/reset/ 
+	http://meyerweb.com/eric/tools/css/reset/
 	v2.0 | 20110126
 	License: none (public domain)
 
@@ -18,8 +18,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
@@ -30,7 +30,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -51,6 +51,26 @@ q:before, q:after {
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
+}
+/*
+=====================================
+
+General Styling
+
+=====================================
+*/
+p, ul{
+	font-family: Consolas;
+	color: rgb(36,204,68);
+	font-size: 15px;
+	align-content:justify;
+}
+ul{
+	list-style-type: square;
+	padding: 10px 20px;
+}
+body{
+	background-color: rgb(32,32,32);
 }
 
 /*
@@ -104,4 +124,57 @@ Header Styling
 }
 .introduction .text{
 	color: green;
+}
+h1, h2, h3{
+	font-family: Consolas;
+	color: rgb(36,204,68);
+}
+h1{
+	font-size: 35px;
+}
+h2{
+	font-size: 26px;
+}
+h3{
+	font-size: 20px;
+}
+/*
+=====================================
+
+Bio Styling
+
+=====================================
+*/
+.bio{
+	padding: 1% 5%;
+	margin:auto;
+	width: 75%;
+	font-size: 20px;
+	background-color: black;
+}
+/*
+=====================================
+
+Footer Styling
+
+=====================================
+*/
+footer{
+position: fixed;
+left: 0;
+bottom: 0;
+width: 100%;
+background-color: black;
+color: white;
+text-align: center;
+padding: 20px 20px;
+font-family: Consolas;
+}
+.footerNav{
+	margin:auto;
+}
+.footerNav a{
+	color: rgb(36,204,68);
+	text-decoration:none;
+	font-weight: bold;
 }
